[gd_scene load_steps=31 format=3 uid="uid://bxbumyjerxld6"]

[ext_resource type="Script" uid="uid://58mtvny8i3hd" path="res://world/spawners/asteroid_spawner.gd" id="1"]
[ext_resource type="Script" uid="uid://c7ckw8gb6gw4r" path="res://world/spawners/station_spawner.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://cb1q0bw0inr12" path="res://ships/enemies/pirate/pirate_ship.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://cjw7dyov4br6k" path="res://world/docking_point/station.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://b07d5oc6kv45w" path="res://ships/player/player_ship.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://b0lepns1qetft" path="res://ui/minimap/map_view.tscn" id="6"]
[ext_resource type="Script" uid="uid://b6ffb55qbo0xd" path="res://world/game_initializer.gd" id="7"]
[ext_resource type="PackedScene" uid="uid://do18uq3pp0ix7" path="res://vfx/background_stars.tscn" id="8"]
[ext_resource type="Texture2D" uid="uid://bxv8xsooyour0" path="res://main/white.png" id="11"]
[ext_resource type="PackedScene" uid="uid://bmrr8sydhyk0t" path="res://world/shaking_camera.tscn" id="12"]
[ext_resource type="Shader" uid="uid://bp24enyaapsut" path="res://vfx/shaders/distorted_view.gdshader" id="13"]
[ext_resource type="Script" uid="uid://bufdp1xryitb7" path="res://world/game_world.gd" id="14"]
[ext_resource type="Script" uid="uid://hroqyd3omrs0" path="res://world/spawners/pirate_spawner.gd" id="15"]
[ext_resource type="Script" uid="uid://cgyjaruv2ufi2" path="res://ui/minimap/map_display.gd" id="15_38608"]
[ext_resource type="PackedScene" path="res://ui/menus/upgrades/upgrade_menu.tscn" id="16"]
[ext_resource type="AudioStream" uid="uid://b5rwtdrww00e7" path="res://ui/minimap/ui_minimap_zoom_in.wav" id="16_1irad"]
[ext_resource type="Script" uid="uid://ces2w3wcytk8b" path="res://ui/ui.gd" id="17"]
[ext_resource type="PackedScene" path="res://ui/menus/quit_menu.tscn" id="18"]
[ext_resource type="PackedScene" uid="uid://bv00wk2go2l6s" path="res://ui/screen_fader.tscn" id="19"]
[ext_resource type="PackedScene" uid="uid://53pcfgby5by6" path="res://vfx/distort_mask_view.tscn" id="20"]
[ext_resource type="PackedScene" uid="uid://dn2lyjt0cp57p" path="res://ui/hud/hud.tscn" id="22"]
[ext_resource type="Script" uid="uid://flsbjhqcsuwy" path="res://vfx/post_process_game_view.gd" id="22_apqpn"]

[sub_resource type="ViewportTexture" id="ViewportTexture_drsak"]
viewport_path = NodePath("MapView")

[sub_resource type="Animation" id="Animation_nu50f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_b071f"]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 0.482968),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qviax"]
resource_name = "disappear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.633333),
"transitions": PackedFloat32Array(1, 0.517632),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.633333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_118x6"]
_data = {
&"RESET": SubResource("Animation_nu50f"),
&"appear": SubResource("Animation_b071f"),
&"disappear": SubResource("Animation_qviax")
}

[sub_resource type="ViewportTexture" id="ViewportTexture_0tkgw"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ShaderMaterial" id="3"]
resource_local_to_scene = true
shader = ExtResource("13")
shader_parameter/displacement_amount = 12.0
shader_parameter/displacement_mask = SubResource("ViewportTexture_0tkgw")

[sub_resource type="Environment" id="4"]
background_mode = 3
glow_enabled = true
glow_levels/5 = 0.0
glow_blend_mode = 1
glow_hdr_threshold = 0.3

[node name="GameInitializer" type="Node"]
script = ExtResource("7")

[node name="GameWorld" type="Node2D" parent="."]
script = ExtResource("14")
radius = 3000.0
iron_amount_balance_level = 750.0
refresh_threshold_range = 350.0

[node name="BackgroundStars" parent="GameWorld" instance=ExtResource("8")]

[node name="Camera" parent="GameWorld" instance=ExtResource("12")]
enabled = true
process_callback = 0
max_zoom = 0.167

[node name="StationSpawner" type="Node2D" parent="GameWorld"]
script = ExtResource("2")
station_scene = ExtResource("4")

[node name="PlayerShip" parent="GameWorld/StationSpawner" instance=ExtResource("5")]

[node name="AsteroidSpawner" type="Node2D" parent="GameWorld"]
script = ExtResource("1")

[node name="PirateSpawner" type="Node2D" parent="GameWorld"]
script = ExtResource("15")
pirate_scene = ExtResource("3")
spawn_radius = 350.0

[node name="MapView" parent="." instance=ExtResource("6")]

[node name="DistortMaskView" parent="." instance=ExtResource("20")]
self_modulate = Color(1, 1, 1, 0)

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
layer = 2
script = ExtResource("17")

[node name="HUD" parent="UI" instance=ExtResource("22")]
mouse_filter = 2

[node name="MapDisplay" type="TextureRect" parent="UI"]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_drsak")
expand_mode = 1
script = ExtResource("15_38608")

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/MapDisplay"]
libraries = {
"": SubResource("AnimationLibrary_118x6")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="UI/MapDisplay"]
stream = ExtResource("16_1irad")
volume_db = -5.465

[node name="UpgradeUI" parent="UI" instance=ExtResource("16")]
visible = false
layout_mode = 3
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScreenFader" parent="UI" instance=ExtResource("19")]

[node name="QuitMenu" parent="UI" instance=ExtResource("18")]
visible = false
anchors_preset = 8
mouse_filter = 2

[node name="PostProcessedLayer" type="CanvasLayer" parent="."]

[node name="GameView" type="TextureRect" parent="PostProcessedLayer"]
material = SubResource("3")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("11")
expand_mode = 1
script = ExtResource("22_apqpn")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("4")

[editable path="map_view"]
[editable path="distort_mask_view"]
